--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.jakewharton:butterknife:8.0.0'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
