--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name="ie.nanorstudios.fsof.activities.MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.RoundActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
